# ultranotei-core

./: .appveyor.yml  .gitignore  CHANGELOG.md  CMakeLists.txt  COPYING.md  CTestCustom.cmake  LICENSE  Makefile  README.md  README_example.md  SECURITY.md  bitbucket-pipelines.yml  soft_fork_plan.md  temp_ed25519.pem
.circleci/: config.yml  send.sh
.github/workflows/: build.yml  macOS.yml  ubuntu16.yml  ubuntu18.yml  ubuntu20.yml  ubuntu22.yml  windows.yml
Doc/: DNS_OpenAlias_Guide.md  INTEGRATION_ROADMAP.md  PLAN.md  README.md  about.md  integration.md  paymentgate.md  rpc_api.md  systemd.md  systemd_guide.md  ultranotei-walletd.service  ultranoteid.service  walletd.service
build_20250109205003/: CMakeCache.txt
build_20250109205127/: CMakeCache.txt
build_20250109205248/: ALL_BUILD.vcxproj  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  UltraNoteI.sln  cmake_install.cmake  version.vcxproj
build_20250109205248/src/: BlockchainExplorer.vcxproj  BlockchainExplorer.vcxproj.filters  CTestTestfile.cmake  Common.vcxproj  CryptoNoteCore.vcxproj  Daemon.vcxproj  Daemon.vcxproj.filters  Http.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  InProcessNode.vcxproj  InProcessNode.vcxproj.filters  JsonRpcServer.vcxproj  JsonRpcServer.vcxproj.filters  Logging.vcxproj  Logging.vcxproj.filters  Mnemonics.vcxproj  NodeRpcProxy.vcxproj  Optimizer.vcxproj  Optimizer.vcxproj.filters  P2P.vcxproj  PaymentGate.vcxproj  PaymentGate.vcxproj.filters  PaymentGateService.vcxproj  PaymentGateService.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  Rpc.vcxproj  Serialization.vcxproj  System.vcxproj  System.vcxproj.filters  Transfers.vcxproj  Transfers.vcxproj.filters  UltraNoteWallet.vcxproj  Wallet.vcxproj  cmake_install.cmake  crypto.vcxproj
build_20250109210329/: ALL_BUILD.vcxproj  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  UltraNoteI.sln  cmake_install.cmake  version.vcxproj
build_20250109210329/src/: BlockchainExplorer.vcxproj  BlockchainExplorer.vcxproj.filters  CTestTestfile.cmake  Common.vcxproj  Common.vcxproj.filters  CryptoNoteCore.vcxproj  CryptoNoteCore.vcxproj.filters  Daemon.vcxproj  Http.vcxproj  Http.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  InProcessNode.vcxproj  InProcessNode.vcxproj.filters  JsonRpcServer.vcxproj  Logging.vcxproj  Mnemonics.vcxproj  Mnemonics.vcxproj.filters  NodeRpcProxy.vcxproj  NodeRpcProxy.vcxproj.filters  Optimizer.vcxproj  Optimizer.vcxproj.filters  P2P.vcxproj  P2P.vcxproj.filters  PaymentGate.vcxproj  PaymentGate.vcxproj.filters  PaymentGateService.vcxproj  PaymentGateService.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  Rpc.vcxproj  Rpc.vcxproj.filters  Serialization.vcxproj  Serialization.vcxproj.filters  System.vcxproj  Transfers.vcxproj  UltraNoteWallet.vcxproj  UltraNoteWallet.vcxproj.filters  Wallet.vcxproj  Wallet.vcxproj.filters  (+2 more)
docs/: about.txt
include/: BlockchainExplorerData.h  CryptoNote.h  CryptoTypes.h  IBlockchainExplorer.h  INode.h  IObservable.h  IStreamSerializable.h  ITransaction.h  ITransfersContainer.h  ITransfersSynchronizer.h  IWallet.h  IWalletLegacy.h  crypto.h
scripts/: build.ps1  build.sh
src/: CMakeLists.txt  CryptoNoteConfig.h  CryptoTypes.h  version.h.in
src/BlockchainExplorer/: BlockchainExplorer.cpp  BlockchainExplorer.h  BlockchainExplorerDataBuilder.cpp  BlockchainExplorerDataBuilder.h  BlockchainExplorerErrors.cpp  BlockchainExplorerErrors.h
src/Common/: ArrayRef.h  ArrayView.h  Base58.cpp  Base58.h  Base64.cpp  Base64.h  BlockingQueue.cpp  ColouredMsg.h  ConsoleHandler.cpp  ConsoleHandler.h  ConsoleTools.cpp  ConsoleTools.h  DnsTools.cpp  DnsTools.h  IInputStream.h  IOutputStream.h  JsonValue.cpp  Math.cpp  Math.h  MemoryInputStream.cpp  MemoryInputStream.h  ObserverManager.h  PathTools.cpp  PathTools.h  ScopeExit.cpp  ScopeExit.h  SignalHandler.cpp  SignalHandler.h  StdInputStream.cpp  StdInputStream.h  StdOutputStream.cpp  StdOutputStream.h  StreamTools.cpp  StreamTools.h  StringBuffer.h  StringInputStream.cpp  StringInputStream.h  StringOutputStream.cpp  StringOutputStream.h  StringTools.cpp  (+8 more)
src/ConnectivityTool/: ConnectivityTool.cpp
src/CryptoNoteCore/: Account.cpp  Account.h  BlockIndex.cpp  BlockIndex.h  BlockInfo.h  Blockchain.cpp  Blockchain.cpp.bak  Blockchain.h  Blockchain.h.bak  BlockchainIndices.cpp  BlockchainIndices.h  BlockchainMessages.cpp  BlockchainMessages.h  Checkpoints.cpp  Checkpoints.h  Core.cpp  Core.h  CoreConfig.cpp  CoreConfig.h  CoreErrors.h  CryptoNoteBasic.cpp  CryptoNoteBasic.h  CryptoNoteBasicImpl.cpp  CryptoNoteBasicImpl.h  CryptoNoteFormatUtils.cpp  CryptoNoteFormatUtils.h  CryptoNoteSerialization.cpp  CryptoNoteSerialization.h  CryptoNoteStatInfo.h  CryptoNoteTools.cpp  CryptoNoteTools.h  Currency.cpp  Currency.h  DepositIndex.cpp  DepositIndex.h  Difficulty.cpp  Difficulty.h  IBlock.cpp  IBlock.h  IBlockchainStorageObserver.h  (+30 more)
src/crypto/: CMakeLists.txt  aesb.h  chacha.c  chacha.h  chacha8.h  crypto-ops-data.c  crypto-ops.c  crypto.cpp  crypto.h  crypto_impl.cpp  cryptonight-variants.h  cryptonight.cpp  cryptonight.h  cryptonight.hpp  generic-ops.h  groestl.c  groestl.h  groestl_tables.h  hash-extra-blake.c  hash-extra-groestl.c  hash-extra-jh.c  hash-extra-skein.c  hash-ops.h  hash.c  hash.h  initializer.h  key_manager.h  oaes_lib.c  random.c  random.h  randomize.h  rctTypes.h  secure_memory.h  secure_random.h  slow-hash.c  slow-hash.cpp  slow-hash.inl  soft_aes.hpp  tree-hash.c
tests/: CMakeLists.txt
tests/CoreTests/: IntegerOverflow.cpp
tests/Hash/: main.cpp
tests/IntegrationTestLib/: BaseFunctionalTests.cpp  BaseFunctionalTests.h  TestWalletLegacy.cpp  TestWalletLegacy.h
tests/IntegrationTests/: IntegrationTests.cpp  MultiVersion.cpp  Node.cpp  WalletLegacyTests.cpp  main.cpp
tests/PerformanceTests/: CryptoNoteSlowHash.h
tests/TransfersTests/: TestNodeRpcProxy.cpp  TestTxPoolSync.cpp  Tests.cpp
tests/UnitTests/: TestWalletService.cpp
(+280 files in other folders)
